projects/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: cohort5-projects
  name: cohort5-projects
  namespace: co5website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cohort5-projects
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cohort5-projects
    spec:
  containers:
  - name: ctr-web
    image: nginx
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/
  - name: ctr-sync
    image: k8s.gcr.io/git-sync:v3.1.6
    volumeMounts:
    - name: html
      mountPath: /tmp/git
  volumes:
  - name: html
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: svc-cohort5-projects
  namespace: co5website
spec:
  selector:
    app: cohort5-projects
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
