projects/project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: co5website-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: cohort5.io
    http:
      paths:
      - path: /projects
        pathType: Prefix
        backend:
          service:
            name: svc-cohort5-projects
            port:
              number: 80
